--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
@@ -7,7 +7,18 @@
     <title>Google Map Api</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="container">
+      <div class="header">
+        <h1 class="header__title">ちずとてんきのあぷりけーしょん</h1>
+      </div>
+
+      <div class="section">
+        <div class="map">
+          <div id="map-view" style="width: 500px; height: 500px;"></div>
+        </div>
+      </div>
+    </div>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAn17wqp8WvL-6F6b7s-vJLXReoYux71-s"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
