基本機能の完成

--- a/index.html
+++ b/index.html
@@ -19,7 +19,27 @@
         </div>
         
         <div class="map-wrapper">
-          <div class="map-feature">a</div>
+          <div class="map-feature">
+            <div class="weather-content">
+              <div id="location-label" class="weather-content__label"></div>
+              <div id="location-name" class="weather-content__name"></div>
+            </div>
+
+            <div class="weather-content">
+              <div id="weather-label" class="weather-content__label"></div>
+              <div id="weather-description" class="weather-content__description"></div>
+              <div id="weather-icon" class="weather-content__icon"></div>
+            </div>
+
+            <div class="weather-content">
+              <div id="temp-label" class="weather-content__label"></div>
+              <div id="temp-current" class="weather-content__temp"></div>
+              <div id="temp-max" class="weather-content__temp"></div>
+              <div id="temp-min" class="weather-content__temp"></div>
+              <div id="temp-humidity" class="weather-content__temp"></div>
+            </div>
+          </div>
+
         </div>
 
       </div>
