update: 天気の状態, アイコンを横並びに更新

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
 
             <div class="weather-content">
               <div id="weather-label" class="weather-content__label"></div>
-              <div id="weather-description" class="weather-content__description"></div>
-              <div id="weather-icon" class="weather-content__icon"></div>
+              <div class="weather-content__item-wrapper">
+                <div id="weather-icon" class="weather-content__icon"></div>
+                <div id="weather-description" class="weather-content__description"></div>
+              </div>
             </div>
 
             <div class="weather-content">
